Bug #6302: Add new page visuals z-indexes

--- a/src/webroot/cms/content-manager/sitemap/modules/new-page.less
+++ b/src/webroot/cms/content-manager/sitemap/modules/new-page.less
@@ -114,6 +114,7 @@
 	.border-radius (8px);	
 	.box-shadow (0, 2px, 3px, rgba(0, 0, 0, 0.75) inset);
 	background: rgba(35, 33, 42, 0.5);
+	z-index: 1;
 }
 
 // Fake tree node proxy which is being dragged
